[gd_scene load_steps=3 format=3 uid="uid://dstx6cieskepw"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_2sabd"]
[ext_resource type="AudioStream" uid="uid://daceqe4uok7cl" path="res://audio/select.mp3" id="2_fnijd"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2sabd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 78.0
offset_right = 148.0
offset_bottom = 136.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="story" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Story"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="select" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fnijd")
volume_db = 24.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/story" to="." method="_on_story_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
